--- a/base/src/main/res/layout/user_quote_card_view.xml
+++ b/base/src/main/res/layout/user_quote_card_view.xml
@@ -1,78 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/userContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:visibility="gone"
+    tools:visibility="visible">
 
-    <data>
 
-        <variable
-            name="userData"
-            type="com.ilustris.motiv.base.beans.User" />
-    </data>
-
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/userpic"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:stateListAnimator="@animator/scale_down_animator"
+        android:transitionName="profilepic"
+        app:civ_border_color="?android:textColorPrimary"
+        app:civ_border_width="2dp"
+        app:civ_circle_background_color="@color/colorPrimaryDark"
+        tools:src="@drawable/ic_neptune" />
 
     <LinearLayout
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:id="@+id/userContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center|start"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_small_8dp">
 
+        <TextView
+            android:id="@+id/username"
+            style="@style/TextAppearance.MaterialComponents.Subtitle2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:maxLength="40"
+            android:maxLines="1"
+            android:text="@{userData.name}"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            tools:text="Caio Alves Ferreira" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/userpic"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:stateListAnimator="@animator/list_animator"
-            android:transitionName="profilepic"
-            app:civ_circle_background_color="@color/colorPrimaryDark"
-            app:civ_border_color="?android:textColorPrimary"
-            app:civ_border_width="2dp"
-            tools:src="@drawable/ic_neptune" />
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginHorizontal="@dimen/margin_small_4dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_saturn_and_other_planets_primary"
+            app:tint="?android:textColorPrimary" />
 
-        <LinearLayout
-            android:layout_gravity="center|start"
-            android:gravity="center"
+        <TextView
+            android:id="@+id/quoteDate"
+            style="@style/TextAppearance.MaterialComponents.Subtitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/padding_small">
-
-            <TextView
-                android:id="@+id/username"
-                android:maxLength="40"
-                style="@style/TextAppearance.MaterialComponents.Subtitle2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@{userData.name}"
-                android:textColor="?android:textColorPrimary"
-                android:maxLines="1"
-                android:textStyle="bold"
-                tools:text="Caio Alves Ferreira" />
-
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:layout_marginHorizontal="@dimen/margin_small"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_saturn_and_other_planets_primary"
-                app:tint="?android:textColorPrimary" />
-
-            <TextView
-                style="@style/TextAppearance.MaterialComponents.Subtitle2"
-                android:layout_gravity="center"
-                android:id="@+id/quoteDate"
-                android:gravity="center"
-                android:textColor="?android:textColorPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="normal"
-                tools:text="10 de Outubro de 2019" />
-        </LinearLayout>
-
-
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="normal"
+            tools:text="10 de Outubro de 2019" />
     </LinearLayout>
-</layout>
+
+
+</LinearLayout>
