--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:stateListAnimator="@animator/list_animator"
                     app:cardBackgroundColor="@color/colorPrimary"
-                    app:cardCornerRadius="@dimen/radius_default"
+                    app:cardCornerRadius="@dimen/radius_default_10dp"
                     app:cardElevation="0dp">
 
                     <LinearLayout
@@ -51,7 +51,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/motiv_gradient"
                         android:orientation="vertical"
-                        android:padding="@dimen/padding_default">
+                        android:padding="@dimen/padding_default_16dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/padding_small"
                     android:stateListAnimator="@animator/list_animator"
-                    app:cardCornerRadius="@dimen/radius_default"
+                    app:cardCornerRadius="@dimen/radius_default_10dp"
                     app:cardElevation="0dp">
 
                     <LinearLayout
@@ -85,7 +85,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/instagram_gradient"
                         android:orientation="vertical"
-                        android:padding="@dimen/padding_default">
+                        android:padding="@dimen/padding_default_16dp">
 
                         <TextView
                             style="@style/TextAppearance.MaterialComponents.Caption"
@@ -98,7 +98,7 @@
                             android:id="@+id/instagramText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingVertical="@dimen/padding_small"
+                            android:paddingVertical="@dimen/padding_small_8dp"
                             android:text="Instagram"
                             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                             android:textColor="@color/white" />
@@ -117,7 +117,7 @@
                     android:padding="@dimen/padding_small"
                     android:text="@string/developed_by"
                     android:textAlignment="center"
-                    android:stateListAnimator="@animator/list_animator"
+                    android:stateListAnimator="@animator/scale_down_animator"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                     android:textColor="@color/md_blue500"
                     android:textStyle="bold" />
@@ -128,7 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:padding="@dimen/padding_small"
+                    android:padding="@dimen/padding_small_8dp"
                     android:text="@string/actual_version"
                     android:textAlignment="center" />
 
