--- a/base/src/main/res/drawable/round_bottom.xml
+++ b/base/src/main/res/drawable/round_bottom.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:bottomLeftRadius="@dimen/radius_default"
-        android:bottomRightRadius="@dimen/radius_default" />
+        android:bottomLeftRadius="@dimen/radius_default_10dp"
+        android:bottomRightRadius="@dimen/radius_default_10dp" />
 
 
     <!-- below code for different radius for each corner. -->
