--- a/base/src/main/res/drawable/round_stroke.xml
+++ b/base/src/main/res/drawable/round_stroke.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/radius_small" />
+    <corners android:radius="@dimen/radius_small_5dp" />
 
     <stroke
         android:width="2dp"
