--- a/base/src/main/res/layout/list_dialog_item_layout.xml
+++ b/base/src/main/res/layout/list_dialog_item_layout.xml
@@ -18,7 +18,7 @@
         android:background="@drawable/bottom_line"
         android:backgroundTint="?android:textColorPrimary"
         android:foreground="?attr/selectableItemBackground"
-        android:padding="@dimen/padding_default"
+        android:padding="@dimen/padding_default_16dp"
         android:text="@{listItem.text}"
         tools:text="@string/app_name">
 
