--- a/base/src/main/res/layout/pics_layout.xml
+++ b/base/src/main/res/layout/pics_layout.xml
@@ -6,7 +6,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
-        android:layout_margin="@dimen/margin_small"
+        android:layout_margin="@dimen/margin_small_4dp"
         android:layout_height="100dp"
         style="@style/MotivCard"
         android:layout_width="match_parent">
