--- a/base/src/main/res/layout/profile_quote_card.xml
+++ b/base/src/main/res/layout/profile_quote_card.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:padding="@dimen/padding_default">
+            android:padding="@dimen/padding_default_16dp">
 
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -38,8 +38,8 @@
                 android:layout_gravity="center"
                 android:contentDescription="Profile picture"
                 android:fitsSystemWindows="true"
-                android:padding="@dimen/padding_default"
-                android:stateListAnimator="@animator/list_animator"
+                android:padding="@dimen/padding_default_16dp"
+                android:stateListAnimator="@animator/scale_down_animator"
                 android:tooltipText="Alterar foto de perfil"
                 android:transitionName="profilepic"
                 app:civ_border_color="?android:textColorPrimary"
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                 android:textColor="?android:textColorPrimary"
@@ -76,13 +76,13 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/padding_default"
+                    android:layout_margin="@dimen/padding_default_16dp"
                     android:layout_toStartOf="@id/messageButton"
                     android:text="@string/follow_user"
                     android:textColor="?android:textColorPrimary"
                     android:textStyle="bold"
                     android:visibility="gone"
-                    app:cornerRadius="@dimen/radius_small"
+                    app:cornerRadius="@dimen/radius_small_5dp"
                     app:elevation="0dp"
                     tools:visibility="visible" />
 
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="@dimen/padding_default"
+                    android:layout_margin="@dimen/padding_default_16dp"
                     android:drawableEnd="@drawable/ic_paper_plane"
                     android:drawableTint="@color/md_white"
                     android:text="@string/message_user"
@@ -99,7 +99,7 @@
                     android:textStyle="bold"
                     android:visibility="gone"
                     app:backgroundTint="@color/colorPrimaryDark"
-                    app:cornerRadius="@dimen/radius_small"
+                    app:cornerRadius="@dimen/radius_small_5dp"
                     app:elevation="0dp"
                     app:iconTint="@color/md_white"
                     tools:visibility="visible" />
