--- a/base/src/main/res/layout/quote_advertise_layout.xml
+++ b/base/src/main/res/layout/quote_advertise_layout.xml
@@ -19,7 +19,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:hapticFeedbackEnabled="true"
         android:orientation="vertical"
-        android:stateListAnimator="@animator/list_animator"
+        android:stateListAnimator="@animator/scale_down_animator"
         app:cardBackgroundColor="@color/lblack"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp">
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:orientation="vertical"
-                    android:padding="@dimen/padding_default">
+                    android:padding="@dimen/padding_default_16dp">
 
                     <com.google.android.gms.ads.formats.AdChoicesView
                         android:id="@+id/adChoices"
@@ -87,7 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:padding="@dimen/padding_default"
+                    android:padding="@dimen/padding_default_16dp"
                     android:text="@{advertise.body}"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
