--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
 
     <style name="roundedImageView" parent="">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerRadius">@dimen/radius_default</item>
+        <item name="cornerRadius">@dimen/radius_default_10dp</item>
     </style>
 
     <style name="DialogAnimation">
@@ -61,7 +61,7 @@
     <style name="Bottom_Dialog_No_Border" parent="Theme.MaterialComponents.BottomSheetDialog">
         <item name="android:windowAnimationStyle">@style/Animation.Design.BottomSheetDialog</item>
         <item name="colorPrimary">@color/material_purple400</item>
-        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="android:layout_margin">@dimen/margin_default_10dp</item>
         <item name="colorPrimaryDark">@color/material_purple800</item>
         <item name="colorAccent">@color/material_purpleA100</item>
         <item name="android:windowIsFloating">true</item>
@@ -73,8 +73,8 @@
     </style>
 
     <style name="ShapeAppearanceOverlay.App.BottomCornerRadius" parent="">
-        <item name="cornerSizeBottomLeft">@dimen/radius_medium</item>
-        <item name="cornerSizeBottomRight">@dimen/radius_medium</item>
+        <item name="cornerSizeBottomLeft">@dimen/radius_medium_15dp</item>
+        <item name="cornerSizeBottomRight">@dimen/radius_medium_15dp</item>
         <item name="cornerFamilyBottomLeft">rounded</item>
         <item name="cornerFamilyBottomRight">rounded</item>
     </style>
@@ -85,7 +85,7 @@
         <item name="strokeColor">?android:textColorPrimary</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="android:layout_margin">@dimen/margin_default_10dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:backgroundTint">@color/colorAccent</item>
         <item name="android:textColor">@color/md_white</item>
@@ -94,23 +94,23 @@
     <style name="ButtonNegative" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">@dimen/padding_small</item>
+        <item name="android:padding">@dimen/padding_small_8dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">?android:textColorHint</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="android:layout_margin">@dimen/margin_default_10dp</item>
         <item name="strokeWidth">@dimen/default_stroke</item>
         <item name="strokeColor">?android:textColorHint</item>
     </style>
 
     <style name="MotivCard">
-        <item name="cardCornerRadius">@dimen/radius_small</item>
+        <item name="cardCornerRadius">@dimen/radius_small_5dp</item>
         <item name="cardBackgroundColor">@color/colorAccent</item>
         <item name="strokeColor">@color/selected_style</item>
         <item name="strokeWidth">@dimen/default_stroke</item>
-        <item name="android:layout_margin">@dimen/margin_small</item>
+        <item name="android:layout_margin">@dimen/margin_small_4dp</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
-        <item name="android:stateListAnimator">@animator/list_animator</item>
+        <item name="android:stateListAnimator">@animator/scale_down_animator</item>
         <item name="android:checkable">true</item>
     </style>
 </resources>
