--- a/manager/src/main/res/drawable/follow_button_shape.xml
+++ b/manager/src/main/res/drawable/follow_button_shape.xml
@@ -4,17 +4,17 @@
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <solid android:color="?attr/navblurOverLayColor" />
-            <corners android:radius="@dimen/radius_default" />
+            <corners android:radius="@dimen/radius_default_10dp" />
             <stroke android:width="1dp" android:color="?android:textColorHint" />
-            <padding android:bottom="@dimen/padding_default" android:left="@dimen/padding_default" android:right="@dimen/padding_default" android:top="@dimen/padding_default" />
+            <padding android:bottom="@dimen/padding_default_16dp" android:left="@dimen/padding_default_16dp" android:right="@dimen/padding_default_16dp" android:top="@dimen/padding_default_16dp" />
         </shape>
     </item>
 
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/radius_default" />
+            <corners android:radius="@dimen/radius_default_10dp" />
             <solid android:color="?android:textColorPrimary" />
-            <padding android:bottom="@dimen/padding_default" android:left="@dimen/padding_default" android:right="@dimen/padding_default" android:top="@dimen/padding_default" />
+            <padding android:bottom="@dimen/padding_default_16dp" android:left="@dimen/padding_default_16dp" android:right="@dimen/padding_default_16dp" android:top="@dimen/padding_default_16dp" />
         </shape>
     </item>
 
