--- a/manager/src/main/res/drawable/round_select.xml
+++ b/manager/src/main/res/drawable/round_select.xml
@@ -3,7 +3,7 @@
 
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/radius_small" />
+            <corners android:radius="@dimen/radius_small_5dp" />
             <stroke android:width="1dp" android:color="?android:textColorPrimary" />
             <solid android:color="?attr/dividerColor" />
 
@@ -11,7 +11,7 @@
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/radius_small" />
+            <corners android:radius="@dimen/radius_small_5dp" />
             <stroke android:width="1dp" android:color="?android:textColorPrimary" />
             <solid android:color="?android:textColorPrimary" />
 
