--- a/manager/src/main/res/layout/style_text_page_layout.xml
+++ b/manager/src/main/res/layout/style_text_page_layout.xml
@@ -2,9 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:padding="@dimen/padding_default"
+            android:padding="@dimen/padding_default_16dp"
             android:text="Motiv"
             android:textAlignment="center"
             android:textColor="@color/md_white"
