--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerInParent="true"
-                    android:padding="@dimen/padding_default"
+                    android:padding="@dimen/padding_default_16dp"
                     android:text="Nome"
                     android:textStyle="bold" />
 
@@ -74,7 +74,7 @@
                     android:layout_toStartOf="@id/saveButton"
                     android:layout_toEndOf="@id/nameTitle"
                     android:background="@color/transparent"
-                    android:padding="@dimen/padding_default"
+                    android:padding="@dimen/padding_default_16dp"
                     app:layout_constraintBottom_toBottomOf="@id/nameTitle"
                     app:layout_constraintEnd_toStartOf="@id/saveButton"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -108,10 +108,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_outline_mail_outline_24"
-                android:drawablePadding="@dimen/padding_default"
+                android:drawablePadding="@dimen/padding_default_16dp"
                 android:enabled="false"
                 android:maxLines="1"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textStyle="bold"
                 tools:text="motiv@gmail.com" />
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:foreground="?attr/selectableItemBackground"
-                    android:padding="@dimen/padding_default"
+                    android:padding="@dimen/padding_default_16dp"
                     android:text="Motiv +"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
@@ -151,9 +151,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_uranus"
-                android:drawablePadding="@dimen/padding_default"
+                android:drawablePadding="@dimen/padding_default_16dp"
                 android:foreground="?selectableItemBackground"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:text="Sobre"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textStyle="bold" />
@@ -162,7 +162,7 @@
                 android:id="@+id/singOutButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:text="Desconectar"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/material_red500"
@@ -175,7 +175,7 @@
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:maxLines="1"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:textStyle="bold"
                 tools:text="caioferre.ira@gmail.com" />
         </LinearLayout>
