--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -6,8 +6,8 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/userCard"
         android:layout_width="200dp"
-        android:layout_margin="@dimen/margin_default"
-        app:cardCornerRadius="@dimen/radius_default"
+        android:layout_margin="@dimen/margin_default_10dp"
+        app:cardCornerRadius="@dimen/radius_default_10dp"
         app:strokeColor="?android:textColorPrimary"
         app:strokeWidth="2dp"
         android:layout_height="match_parent"
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="@dimen/padding_small"
+                android:padding="@dimen/padding_small_8dp"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:textColor="@color/white"
