--- a/app/src/main/res/layout/new_post_tutorial_dialog_layout.xml
+++ b/app/src/main/res/layout/new_post_tutorial_dialog_layout.xml
@@ -12,7 +12,7 @@
         android:background="?android:colorBackground"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/padding_default">
+        android:padding="@dimen/padding_default_16dp">
 
         <View
             android:id="@+id/topAnimation"
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_default"
+            android:padding="@dimen/padding_default_16dp"
             android:text="Um novo jeito de criar seus posts"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_swipe_left"
-            android:paddingVertical="@dimen/padding_small"
+            android:paddingVertical="@dimen/padding_small_8dp"
             android:text="Simples e prático! Arrasta para esquerda para mudar o estilo da frase!"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
@@ -45,7 +45,7 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/padding_default"
+            android:paddingVertical="@dimen/padding_default_16dp"
             android:stateListAnimator="@animator/list_animator"
             android:text="continuar"
             android:textAllCaps="false"
