--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:background="@color/transparent"
         android:orientation="horizontal"
-        android:padding="@dimen/padding_small"
+        android:padding="@dimen/padding_small_8dp"
         tools:visibility="visible"
         android:visibility="gone">
 
