--- a/app/src/main/res/layout/profile_quote_card.xml
+++ b/app/src/main/res/layout/profile_quote_card.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:padding="@dimen/padding_default">
+            android:padding="@dimen/padding_default_16dp">
 
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -44,7 +44,7 @@
                 android:layout_gravity="center"
                 android:contentDescription="Profile picture"
                 android:fitsSystemWindows="true"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:stateListAnimator="@animator/list_animator"
                 android:tooltipText="Alterar foto de perfil"
                 android:transitionName="@string/user_pic_transaction"
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="@dimen/padding_default"
+                android:padding="@dimen/padding_default_16dp"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                 android:textColor="@color/white"
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingVertical="@dimen/padding_default"
+                android:paddingVertical="@dimen/padding_default_16dp"
                 app:layout_constraintTop_toBottomOf="@id/profilepic">
 
 
@@ -89,17 +89,17 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginHorizontal="@dimen/margin_default_10dp"
             android:layout_marginBottom="?attr/actionBarSize"
             android:layout_toEndOf="@id/followButton"
             android:drawableTint="@color/white"
-            android:padding="@dimen/padding_small"
+            android:padding="@dimen/padding_small_8dp"
             android:text="@string/message_user"
             android:textColor="?android:textColorPrimary"
             android:textStyle="bold"
             android:visibility="gone"
             app:backgroundTint="?android:colorBackground"
-            app:cornerRadius="@dimen/radius_default"
+            app:cornerRadius="@dimen/radius_default_10dp"
             app:icon="@drawable/ic_paper_plane"
             app:iconGravity="textEnd"
             app:iconTint="?android:textColorPrimary"
@@ -111,13 +111,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginHorizontal="@dimen/margin_default"
+            android:layout_marginHorizontal="@dimen/margin_default_10dp"
             android:layout_marginBottom="?attr/actionBarSize"
             android:background="@drawable/follow_button_shape"
             android:button="@color/transparent"
             android:checked="true"
-            android:paddingHorizontal="@dimen/padding_big"
-            android:paddingVertical="@dimen/padding_default"
+            android:paddingHorizontal="@dimen/padding_big_24"
+            android:paddingVertical="@dimen/padding_default_16dp"
             android:text="@string/follow_user"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:visibility="gone"
