--- a/app/src/main/res/layout/profile_tutorial_dialog_layout.xml
+++ b/app/src/main/res/layout/profile_tutorial_dialog_layout.xml
@@ -12,7 +12,7 @@
         android:background="?android:colorBackground"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/padding_default">
+        android:padding="@dimen/padding_default_16dp">
 
         <View
             android:id="@+id/topAnimation"
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_default"
+            android:padding="@dimen/padding_default_16dp"
             android:text="Seu perfil de cara nova!"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_swipe_up"
-            android:paddingVertical="@dimen/padding_small"
+            android:paddingVertical="@dimen/padding_small_8dp"
             android:text="Simples e prático como sempre! Arrasta para cima que para ver seus posts e claro seus favoritos também!"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
@@ -44,8 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_user_filled"
-            android:drawablePadding="@dimen/padding_small"
-            android:paddingVertical="@dimen/padding_small"
+            android:drawablePadding="@dimen/padding_small_8dp"
+            android:paddingVertical="@dimen/padding_small_8dp"
             android:text="Como nos velhos tempos você ainda pode trocar sua foto de perfil por um de nossos ícones!"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
@@ -53,8 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_baseline_imagesearch_roller_24"
-            android:drawablePadding="@dimen/padding_small"
-            android:paddingVertical="@dimen/padding_small"
+            android:drawablePadding="@dimen/padding_small_8dp"
+            android:paddingVertical="@dimen/padding_small_8dp"
             android:text="A grande novidade são as capas de perfil, começamos a introduzi-las agora, mas com certeza teremos muito mais com o tempo!"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
@@ -63,7 +63,7 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/padding_default"
+            android:paddingVertical="@dimen/padding_default_16dp"
             android:stateListAnimator="@animator/list_animator"
             android:text="continuar"
             android:textAllCaps="false"
