--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -9,21 +9,21 @@
         android:id="@+id/mainView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="@dimen/padding_default"
+        android:padding="@dimen/padding_default_16dp"
         android:orientation="vertical">
 
         <include
             layout="@layout/motiv_dots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_default" />
+            android:layout_marginHorizontal="@dimen/padding_default_16dp" />
 
         <ImageView
             android:id="@+id/covers_gif_mark"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            android:layout_marginVertical="@dimen/margin_small"
+            android:layout_marginVertical="@dimen/margin_small_4dp"
             android:scaleType="fitCenter"
             android:src="@drawable/giphy_color"
             android:visibility="gone"
@@ -32,7 +32,7 @@
 
         <TextView
             android:id="@+id/dialog_title"
-            android:padding="@dimen/padding_default"
+            android:padding="@dimen/padding_default_16dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:textStyle="bold"
             tools:text="Escolher ícone de perfil"
