--- a/app/src/main/res/layout/quote_advertise_layout.xml
+++ b/app/src/main/res/layout/quote_advertise_layout.xml
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center|start"
                         android:orientation="vertical"
-                        android:padding="@dimen/padding_small">
+                        android:padding="@dimen/padding_small_8dp">
 
                         <TextView
                             android:id="@+id/username"
@@ -122,7 +122,7 @@
 
                         android:layout_margin="@dimen/statusBarHeight"
                         android:gravity="center"
-                        android:padding="@dimen/padding_default"
+                        android:padding="@dimen/padding_default_16dp"
                         android:text="Conteúdo patrocinado"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                         android:textColor="@color/colorAccent"
@@ -135,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:padding="@dimen/padding_default"
+                    android:padding="@dimen/padding_default_16dp"
                     android:text="@{advertise.body}"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
