--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -16,7 +16,7 @@
         android:layout_height="250dp"
         android:layout_margin="10dp"
         android:stateListAnimator="@animator/list_animator"
-        app:cardCornerRadius="@dimen/radius_default"
+        app:cardCornerRadius="@dimen/radius_default_10dp"
         app:cardElevation="0dp"
         app:strokeColor="?android:textColorPrimary"
         app:strokeWidth="2dp">
