--- a/app/src/main/res/layout/users_page_card.xml
+++ b/app/src/main/res/layout/users_page_card.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="?attr/actionBarSize"
             android:background="@color/transparent"
-            android:padding="@dimen/padding_default"
+            android:padding="@dimen/padding_default_16dp"
             android:fontFamily="@font/questrial"
             android:gravity="center"
             android:text="Usuários para acompanhar"
